Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-99220

Fix race in testRecordsTaskStats()

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Networking & Observability
    • Fully Compatible
    • ALL
    • Networking & Obs 2025-01-20
    • 0
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None

      The testRecordsTaskStats function in src/mongo/transport/reactor_test_fixture.h can race between the ExecutorStats incrementing the `executed` counter and the test checking for the value.

            Assignee:
            joseph.prince@mongodb.com Joseph Prince
            Reporter:
            joseph.prince@mongodb.com Joseph Prince
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: