SERVER-99220 Fix race in ReactorTestFixture::testRecordsTaskStats() (#31076)

GitOrigin-RevId: 32a9f95eb4abae51df4096ac71c04c021532d957